Update button text and simplify feed item titles

--- a/server/index.html
+++ b/server/index.html
@@ -47,7 +47,7 @@
         >
           <input type="text" name="keywords" placeholder="Keywords" required />
           <input type="text" name="location" placeholder="Location" />
-          <button type="submit">Create Search</button>
+          <button type="submit">Create RSS Feed</button>
         </form>
       </div>
       <p class="spinner htmx-indicator">Loading...</p>
