--- a/server/assets/index.html
+++ b/server/assets/index.html
@@ -32,14 +32,14 @@
                 visibility: hidden;
             }
 
-            .copy-button {
+            .copy-button,
+            .reset-button {
                 margin-left: 10px;
-                padding: 5px 10px;
-                background: #007bff;
-                color: white;
-                border: none;
-                border-radius: 3px;
                 cursor: pointer;
+            }
+
+            .reset-button {
+                margin-top: 10px;
             }
 
             .copy-feedback {
@@ -61,8 +61,8 @@
           <i>create your feed<br>wait for the offers to come<br>apply for the jobs</i><br>-</p>
         <br />
         <div class="centered-form">
-            <p>create a new RSS feed...</p>
             <div id="content" class="spinner htmx-indicator">
+                <p>create a new RSS feed...</p>
                 <form
                     style="display: inline"
                     hx-post="/feeds"
@@ -123,6 +123,30 @@
                 setTimeout(() => {
                     feedback.classList.remove("show");
                 }, 2000);
+            }
+
+            function resetForm() {
+                const content = document.getElementById("content");
+                content.innerHTML = `
+                    <p>create a new RSS feed...</p>
+                    <form
+                        style="display: inline"
+                        hx-post="/feeds"
+                        hx-indicator=".spinner"
+                        hx-target="#content"
+                        hx-swap="innerHTML"
+                    >
+                        <input
+                            type="text"
+                            name="keywords"
+                            placeholder="keywords, ie. barista"
+                            required
+                        />
+                        <input type="text" name="location" placeholder="location, ie. berlin" />
+                        <button type="submit">create RSS feed</button>
+                    </form>
+                `;
+                htmx.process(content);
             }
         </script>
     </body>
