Update tagline and add GitHub link target in index.html

--- a/server/assets/index.html
+++ b/server/assets/index.html
@@ -58,8 +58,7 @@
     </head>
     <body>
       <p style="text-align: center"><b>jobber</b> - dynamic job search RSS feed generator<br>-<br>
-          <i>create your feed<br>wait for the offers to come<br>apply for the jobs</i><br>-</p>
-        <br />
+          <i>create your own feed<br>wait for the offers to come<br>apply for the jobs</i><br>-</p>
         <div class="centered-form">
             <div id="content" class="spinner htmx-indicator">
                 <p>create a new RSS feed...</p>
@@ -82,7 +81,6 @@
             </div>
             <p class="spinner htmx-indicator">Loading...</p>
         </div>
-
         <p style="text-align: center"><b>good to know...</b><br>
             jobs from LinkedIn only (for now)<br>
             feeds are refreshed hourly<br>
@@ -91,7 +89,7 @@
 
         <footer>
             <p style="text-align: center">- this website does not use cookies, <i>hooray! -</i><br>- jobber v0.1 -<br>
-            <a href="github.com/Alvaroalonsobabbel/jobber"><img src="data:image/png;base64,{{template "github-logo.base64"}}" width="15" height="15" /></a>
+            <a href="https://github.com/Alvaroalonsobabbel/jobber" target="_blank"><img src="data:image/png;base64,{{template "github-logo.base64"}}" width="15" height="15" /></a>
 
             </p>
         </footer>
