fix: simplified assert scrubbing

--- a/server/approvals/server_test.TestServer.POST.feeds_with_correct_values.approved.html
+++ b/server/approvals/server_test.TestServer.POST.feeds_with_correct_values.approved.html
@@ -1,12 +1,14 @@
 <p>
     done! your RSS link is:<br>
-    <i>https://127.0.0.1:PORT_SCRUBBED/feeds?keywords=golang&location=berlin')">copy RSS feed</button>
+    <i>https://127.0.0.1:PORT_SCRUBBED/feeds?keywords=golang&location=berlin</i><br><br>
 
-    <a href=HREF_SCRUBBED target="_blank" style="text-decoration: none;">
+    <button class="copy-button" onclick="copyToClipboard('https://127.0.0.1:PORT_SCRUBBED/feeds?keywords=golang&location=berlin')">copy RSS feed</button>
+
+    <a href="https://127.0.0.1:PORT_SCRUBBED/feeds?keywords=golang&location=berlin" target="_blank" style="text-decoration: none;">
         <button type="button">open RSS feed</button>
     </a>
 
-    <a href=HREF_SCRUBBED>
+    <a href="/">
         <button type="button">create another RSS feed</button>
     </a>
 
