fix: added scrubbing for HTML feed test

--- a/server/approvals/server_test.TestServer.GET.feeds_valid_HTML_feed.approved.html
+++ b/server/approvals/server_test.TestServer.GET.feeds_valid_HTML_feed.approved.html
@@ -95,7 +95,7 @@
       <tr>
         <td>Junior Golang Dweeb</td>
         <td>Späti GmbH</td>
-        <td>Dec 21</td>
+        <td>DATE_SCRUBBED</td>
         <td><a href=https://www.linkedin.com/jobs/view/existing_offer target="_blank">LinkedIn</a></td>
       </tr>
       
