Add Location field to feed HTML and RSS templates

--- a/server/approvals/server_test.TestServer.GET.feeds_valid_HTML_feed.approved.html
+++ b/server/approvals/server_test.TestServer.GET.feeds_valid_HTML_feed.approved.html
@@ -88,6 +88,7 @@
       <tr>
         <th>Title</th>
         <th>Company</th>
+        <th>Location</th>
         <th>Posted</th>
         <th>Source</th>
       </tr>
@@ -95,6 +96,7 @@
       <tr>
         <td>Junior Golang Dweeb</td>
         <td>Späti GmbH</td>
+        <td>Berlin</td>
         <td>DATE_SCRUBBED</td>
         <td><a href=https://www.linkedin.com/jobs/view/existing_offer target="_blank">LinkedIn</a></td>
       </tr>
