--- a/server/approvals/server_test.TestServer.GET.feeds_valid_HTML_feed.approved.html
+++ b/server/approvals/server_test.TestServer.GET.feeds_valid_HTML_feed.approved.html
@@ -88,6 +88,7 @@
       <tr>
         <th>Title</th>
         <th>Company</th>
+        <th>Description</th>
         <th>Location</th>
         <th>Posted</th>
         <th>Source</th>
@@ -96,9 +97,19 @@
       <tr>
         <td>Junior Golang Dweeb</td>
         <td>Späti GmbH</td>
+        <td></td>
         <td>Berlin</td>
         <td>DATE_SCRUBBED</td>
         <td><a href=https://www.linkedin.com/jobs/view/existing_offer target="_blank">LinkedIn</a></td>
+      </tr>
+      
+      <tr>
+        <td>Senior Golang Dweeb</td>
+        <td>Späti GmbH</td>
+        <td>some nifty description</td>
+        <td>Berlin</td>
+        <td>DATE_SCRUBBED</td>
+        <td><a href=https://www.stepstone.de/senior_golang_dweeb target="_blank">Stepstone</a></td>
       </tr>
       
     </table>
