add timeout functionality

--- a/server/approvals/server_test.TestServer.POST.feeds_query_creation_timeout.approved.html
+++ b/server/approvals/server_test.TestServer.POST.feeds_query_creation_timeout.approved.html
@@ -1,16 +1,13 @@
 <p>
-    {{ if .TimedOut }}
+    
     while your search query has been created, we will need some more time to fetch all the current offers. <br>
     please save the URL and check back in 5 minutes or so.<br><br>
-    {{ else }}
-    done! 
-    {{ end -}}
     your RSS link is:<br>
-    <i>{{.URL}}</i><br><br>
+    <i>https://127.0.0.1:PORT_SCRUBBED/feeds?keywords=fluffy+dogs&location=berlin</i><br><br>
 
-    <button class="copy-button" onclick="copyToClipboard('{{.URL}}')">copy RSS feed</button>
+    <button class="copy-button" onclick="copyToClipboard('https://127.0.0.1:PORT_SCRUBBED/feeds?keywords=fluffy+dogs&location=berlin')">copy RSS feed</button>
 
-    <a href="{{.URL}}" target="_blank" style="text-decoration: none;">
+    <a href="https://127.0.0.1:PORT_SCRUBBED/feeds?keywords=fluffy+dogs&location=berlin" target="_blank" style="text-decoration: none;">
         <button type="button">open RSS feed</button>
     </a>
 
