--- a/server/approvals/server_test.TestServer.POST.feeds_with_correct_values.approved.html
+++ b/server/approvals/server_test.TestServer.POST.feeds_with_correct_values.approved.html
@@ -1,5 +1,7 @@
 <p>
-    done! your RSS link is:<br>
+    
+    done! 
+    your RSS link is:<br>
     <i>https://127.0.0.1:PORT_SCRUBBED/feeds?keywords=golang&location=berlin</i><br><br>
 
     <button class="copy-button" onclick="copyToClipboard('https://127.0.0.1:PORT_SCRUBBED/feeds?keywords=golang&location=berlin')">copy RSS feed</button>
