auto refresh page and highlight new additions

--- a/server/approvals/server_test.TestServer.GET.feeds_invalid_HTML_feed.approved.html
+++ b/server/approvals/server_test.TestServer.GET.feeds_invalid_HTML_feed.approved.html
@@ -49,6 +49,10 @@
             .copy-feedback.show {
                 opacity: 1;
             }
+
+            .new-entry {
+                font-style: italic;
+            }
         </style>
     </head>
     <body>
@@ -72,4 +76,79 @@
     </a></p>
 </footer>
 </body>
+
+
+<script>
+function copyToClipboard(url) {
+  navigator.clipboard
+    .writeText(url)
+    .then(() => {
+      showCopyFeedback();
+    })
+    .catch((err) => {
+      console.error("Failed to copy: ", err);
+      showCopyFeedback("Failed to copy");
+    });
+}
+
+function showCopyFeedback(message = "Copied!") {
+  let feedback = document.querySelector(".copy-feedback");
+  if (!feedback) {
+    feedback = document.createElement("div");
+    feedback.className = "copy-feedback";
+    document.querySelector(".copy-button").parentNode.appendChild(feedback);
+  }
+  feedback.textContent = message;
+  feedback.classList.add("show");
+
+  setTimeout(() => {
+    feedback.classList.remove("show");
+  }, 2000);
+}
+
+function getLocalStorageKey() {
+  const url = new URL(window.location);
+  const params = new URLSearchParams(url.search);
+  const localStorageKey = `${params.getAll("keywords").join("+")}/${params.get(
+    "location"
+  )}`;
+
+  return localStorageKey;
+}
+
+const feedItems = document.querySelectorAll(".details-wrapper details summary");
+const latestFeedItemOnPage = feedItems[0].innerText;
+
+function highlightLatestAdditions() {
+  const latestFeedItemLocalStorage = localStorage.getItem(getLocalStorageKey());
+
+  if (latestFeedItemLocalStorage !== latestFeedItemOnPage) {
+    const indexOfLatestPost = Array.from(feedItems).findIndex(
+      (item) => item.innerText === latestFeedItemLocalStorage
+    );
+
+    const nrOfNewItems =
+      indexOfLatestPost !== -1 ? indexOfLatestPost : feedItems.length;
+
+    for (let i = 0; i < nrOfNewItems; i++) {
+      feedItems[i].classList.add("new-entry");
+    }
+  }
+}
+
+function autoRefresh() {
+  window.location = window.location.href;
+}
+
+if (window.location.pathname === "/feeds") {
+  highlightLatestAdditions();
+  localStorage.setItem(getLocalStorageKey(), latestFeedItemOnPage);
+
+  const thirtyMinutes = 30 * 60 * 1000;
+  setInterval(autoRefresh, thirtyMinutes);
+}
+
+
+</script>
+
 </html>
