--- a/server/approvals/server_test.TestServer.GET.feeds_valid_HTML_feed.approved.html
+++ b/server/approvals/server_test.TestServer.GET.feeds_valid_HTML_feed.approved.html
@@ -51,7 +51,7 @@
             }
 
             .new-entry {
-                font-style: italic;
+                font-weight: bold;
             }
         </style>
     </head>
@@ -187,6 +187,12 @@ function getLocalStorageKey() {
 const feedItems = document.querySelectorAll(".details-wrapper details summary");
 const latestFeedItemOnPage = feedItems[0].innerText;
 
+const pageTitle = "rssjobs";
+const pageTitleNewJobs = (nrOfNewPosts) =>
+  `${pageTitle} - feed updated with ${nrOfNewPosts} ${
+    nrOfNewPosts === 1 ? "post" : "posts"
+  } `;
+
 function highlightLatestAdditions() {
   const latestFeedItemLocalStorage = localStorage.getItem(getLocalStorageKey());
 
@@ -194,6 +200,7 @@ function highlightLatestAdditions() {
     const indexOfLatestPost = Array.from(feedItems).findIndex(
       (item) => item.innerText === latestFeedItemLocalStorage
     );
+    document.title = pageTitleNewJobs(indexOfLatestPost);
 
     const nrOfNewItems =
       indexOfLatestPost !== -1 ? indexOfLatestPost : feedItems.length;
@@ -214,8 +221,13 @@ if (window.location.pathname === "/feeds") {
 
   const thirtyMinutes = 30 * 60 * 1000;
   setInterval(autoRefresh, thirtyMinutes);
-}
 
+  window.addEventListener("focus", () => {
+    document.title = pageTitle;
+  });
+} else {
+  window.removeEventListener("focus");
+}
 
 </script>
 
