Revert "pinned tab notification: fix bug where the tab would not highlight as expected when page title change"

--- a/server/approvals/server_test.TestServer.GET.feeds_valid_HTML_feed.approved.html
+++ b/server/approvals/server_test.TestServer.GET.feeds_valid_HTML_feed.approved.html
@@ -212,23 +212,21 @@ function highlightLatestAdditions() {
 }
 
 function autoRefresh() {
-  location.reload();
+  window.location = window.location.href;
 }
 
 if (window.location.pathname === "/feeds") {
+  highlightLatestAdditions();
+  localStorage.setItem(getLocalStorageKey(), latestFeedItemOnPage);
+
   const thirtyMinutes = 30 * 60 * 1000;
   setInterval(autoRefresh, thirtyMinutes);
 
-  window.addEventListener("onLoad", () => {
-    highlightLatestAdditions();
-    localStorage.setItem(getLocalStorageKey(), latestFeedItemOnPage);
-  });
   window.addEventListener("focus", () => {
     document.title = pageTitle;
   });
 } else {
   window.removeEventListener("focus");
-  window.removeEventListener("onLoad");
 }
 
 </script>
