its "load" not "onLoad"

--- a/server/approvals/server_test.TestServer.GET.feeds_invalid_HTML_feed.approved.html
+++ b/server/approvals/server_test.TestServer.GET.feeds_invalid_HTML_feed.approved.html
@@ -151,7 +151,7 @@ if (window.location.pathname === "/feeds") {
   const thirtyMinutes = 30 * 60 * 1000;
   setInterval(autoRefresh, thirtyMinutes);
 
-  window.addEventListener("onLoad", () => {
+  window.addEventListener("load", () => {
     highlightLatestAdditions();
     localStorage.setItem(getLocalStorageKey(), latestFeedItemOnPage);
   });
