--- a/server/approvals/server_test.TestServer.GET._index_page.approved.html
+++ b/server/approvals/server_test.TestServer.GET._index_page.approved.html
@@ -177,7 +177,7 @@ if (window.location.pathname === "/feeds") {
   const thirtyMinutes = 30 * 60 * 1000;
   setInterval(autoRefresh, thirtyMinutes);
 
-  window.addEventListener("onLoad", () => {
+  window.addEventListener("load", () => {
     highlightLatestAdditions();
     localStorage.setItem(getLocalStorageKey(), latestFeedItemOnPage);
   });
