--- a/server/approvals/server_test.TestServer.POST.feeds_with_correct_values.approved.html
+++ b/server/approvals/server_test.TestServer.POST.feeds_with_correct_values.approved.html
@@ -1,4 +1,4 @@
-<p>
+<p class="container-create-response">
     
     done! 
     your RSS link is:<br>
@@ -6,7 +6,7 @@
 
     <button class="copy-button" onclick="copyToClipboard('https://127.0.0.1:PORT_SCRUBBED/feeds?keywords=golang&location=berlin')">copy RSS feed</button>
 
-    <a href="https://127.0.0.1:PORT_SCRUBBED/feeds?keywords=golang&location=berlin" target="_blank" style="text-decoration: none;">
+    <a href="https://127.0.0.1:PORT_SCRUBBED/feeds?keywords=golang&location=berlin" target="_blank">
         <button type="button">open RSS feed</button>
     </a>
 
