updated readme and faq

--- a/server/approvals/server_test.TestServer.GET.help_help_page.approved.html
+++ b/server/approvals/server_test.TestServer.GET.help_help_page.approved.html
@@ -24,7 +24,7 @@
     <br>
     <p><b>how to get started the easy way</b><br>
     1 - create your job search feed <a href="/" target="_blank">here</a><br>
-    2 - click on <i>open RSS feed</i> to see the results in a browser tab. you can refresh this tab periodically to see if there are any new offers<br>
+    2 - click on <i>open RSS feed</i> to see the results in a browser tab. this tab will refresh automatically every 30 min and will display any new offers<br>
     <br>
     <p><b>how to get started with an RSS reader</b><br>
     1 - install an RSS reader (see RSS reader recommendations)<br>
@@ -50,7 +50,7 @@
     </details>
     <details>
     <summary>which job portals does it use?</summary>
-    LinkedIn and Stepstone. you don't need to be registered with any of the job portals to use this service
+    LinkedIn, Stepstone and Glassdoor. you don't need to have a user in any of the job portals to use this service
     </details>
     <details>
     <summary>does this service do any additional filtering on the search?</summary>
@@ -58,7 +58,7 @@
     </details>
     <details>
     <summary>why does my job search doesn't show a week of content?</summary>
-    services like LinkedIn limit the amount of information that can be retrieved. If you do a search that will most likely return more than 1000 items, only 990 items will be shown. be careful with generalistic searches like "developer + remote"
+    services like LinkedIn limit the amount of information that can be retrieved. If you do a search that will most likely return more than 1000 items, only 1000 items will be shown. be careful with generalistic queries like "developer + remote". alternatively it could be that your query is rare and there are not so many offers for it
     </details>
     <details>
     <summary>how often are the feeds refreshed?</summary>
@@ -66,7 +66,7 @@
     </details>
     <details>
     <summary>can feeds be deleted?</summary>
-    yes. if no one uses a feed for a week it will be automatically deleted
+    yes. if no one visits a feed for a week it will be automatically deleted
     </details>
     <details>
     <summary>can I have more than one feed?</summary>
