--- a/server/approvals/server_test.TestServer.GET.feeds_valid_HTML_feed.approved.html
+++ b/server/approvals/server_test.TestServer.GET.feeds_valid_HTML_feed.approved.html
@@ -9,7 +9,7 @@
         <title>rssjobs</title>
         <script src="https://unpkg.com/htmx.org@1.9.10"></script>
         <script src="static/script.v.1.0.0.js" async defer></script>
-        <link rel="stylesheet" href="static/style.1.0.0.css">
+        <link rel="stylesheet" href="static/style.v.1.0.0.css">
     </head>
     <body>
         <header>
